TH-283 WIP provider listing styles

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/image-background/_image-background.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/image-background/_image-background.scss
@@ -46,4 +46,15 @@
       margin-top: 10px;
     }
   }
+
+  &.bottom-right {
+    padding-bottom: 10px;
+    padding-top: 0;
+    margin-bottom: 10px;
+
+    .image::before {
+      margin-right: -20px;
+      margin-top: 10px;
+    }
+  }
 }
