--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-list/provider-list.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-list/provider-list.twig
@@ -1,4 +1,4 @@
-<div class="provider-list">
+<div class="teaser-list">
   {% for provider in providers %}
     {% include "@organisms/provider-teaser/provider-teaser.twig" with {
         "provider": provider,
