--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/pagination/pagination.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/pagination/pagination.twig
@@ -1,24 +1,30 @@
 <nav class="pager" role="navigation" aria-labelledby="pagination-heading">
   <h4 id="pagination-heading" class="visually-hidden">Pagination</h4>
   <ul class="pager__items js-pager__items">
-    <li class="pager__item is-active">
-      <a href="?page=0" title="Current page"><span class="visually-hidden">Current page</span>1</a>
+    <li class="pager__item pager__item--next">
+      <a href="#" title="Go to next page" rel="next"><span class="visually-hidden">Next page</span><span aria-hidden="true">‹ prev</span>
+      </a>
+    </li>
+    <li class="pager__item">
+      <a href="?page=0" title="Go to page 1"><span class="visually-hidden">Current page</span>1</a>
     </li>
     <li class="pager__item">
       <a href="#" title="Go to page 2"><span class="visually-hidden">Page</span>2</a>
     </li>
-    <li class="pager__item">
-      <a href="#" title="Go to page 3"><span class="visually-hidden">Page</span>3</a>
+    <li class="pager__item  is-active">
+      <a href="#" title="Current Page"><span class="visually-hidden">Page</span>3</a>
     </li>
     <li class="pager__item">
       <a href="#" title="Go to page 4"><span class="visually-hidden">Page</span>4</a>
     </li>
-    <li class="pager__item pager__item--next">
-      <a href="#" title="Go to next page" rel="next"><span class="visually-hidden">Next page</span><span aria-hidden="true">›</span>
-      </a>
+    <li class="pager__item">
+      <a href="#" title="Go to page 5"><span class="visually-hidden">Page</span>5</a>
     </li>
-    <li class="pager__item pager__item--last">
-      <a href="#" title="Go to last page"><span class="visually-hidden">Last page</span><span aria-hidden="true">»</span>
+    <li class="pager__item">
+      <a href="#" title="Go to page 6"><span class="visually-hidden">Page</span>6</a>
+    </li>
+    <li class="pager__item pager__item--next">
+      <a href="#" title="Go to next page" rel="next"><span class="visually-hidden">Next page</span><span aria-hidden="true">next ›</span>
       </a>
     </li>
   </ul>
