--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-filter/provider-filter.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-filter/provider-filter.twig
@@ -1,36 +1,46 @@
-<div class="provider-filter">
-  <div class="provider-filter--top">
-    <div class="provider-filter__labels">
-      <span>Filter by:</span>
+<div class="filter">
+  <div class="filter-grid-wrapper">
+    <div class="filter__labels">
+      <span>Filter</span>
       <a href="/">Clear Filters</a>
     </div>
-    <div>
-      <label>Specialty</label>
-      <select>
-        <option value="Any">Any</option>
-      </select>
+    <div class="filter__filters">
+      <div class="filter--top">
+        <div>
+          <label>Specialty</label>
+          <select>
+            <option default>Any</option>
+          </select>
+        </div>
+        <div>
+          <label>Gender</label>
+          <select>
+            <option default>Any</option>
+          </select>
+        </div>
+        <div>
+          <label>Languages</label>
+          <select>
+            <option default>Any</option>
+          </select>
+        </div>
+        <div>
+          <label>Zip Code</label>
+          <input type="text" placeholder="00000" />
+        </div>
+        <div>
+          <label>Distance</label>
+          <select>
+            <option class="placeholder" value="" disabled selected hidden>Any</option>
+          </select>
+        </div>
+      </div>
+      <div class="filter--bottom">
+        <label>Provider Type</label>
+        <div><input type="radio" value="all">All Providers</div>
+        <div><input type="radio" value="physicians">Physicians Only</div>
+        <div><input type="radio" value="advanced">Advanced Practice Providers Only</div>
+      </div>
     </div>
-    <div>
-      <label>Gender</label>
-      <select>
-        <option value="Any">Any</option>
-      </select>
-    </div>
-    <div>
-      <label>Languages</label>
-      <select>
-        <option value="Any">Any</option>
-      </select>
-    </div>
-    <div>
-      <label>Zip Code</label>
-      <input type="text" />
-    </div>
-  </div>
-  <div class="provider-filter--bottom">
-    <label>Provider Type</label>
-    <input type="radio" value="all">All Providers
-    <input type="radio"value="physicians">Physicians Only
-    <input type="radio"value="advanced">Advanced Practice Providers Only
   </div>
 </div>
