--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-filter/_provider-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-filter/_provider-filter.scss
@@ -3,7 +3,7 @@
   padding: 2em;
 
   @include breakpoint($bp5) {
-    margin-left: calc(100% - 1600px);
+    margin-left: calc(((100% - 1500px) / 2) + 2em);
     border-radius: 10px 0 0 10px;
   }
 
@@ -13,6 +13,8 @@
     flex-wrap: wrap;
     align-items: flex-start;
     justify-content: space-between;
+    margin: 0;
+    padding: 0;
 
     @include breakpoint($bp2) {
       flex-wrap: wrap;
