--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-search/_provider-search.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-search/_provider-search.scss
@@ -1,12 +1,25 @@
 .listing-search {
   @include grid;
   display: flex;
+  flex-wrap: wrap;
   align-items: flex-end;
+  justify-content: space-between;
   width: 100%;
   margin-bottom: 3em;
 
+  @include breakpoint($bp2) {
+    flex-wrap: nowrap;
+  }
+
   > div {
-    width: calc(100% - 225px - 2em);
+    margin-bottom: 2em;
+    width: 100%;
+
+    @include breakpoint($bp2) {
+      margin-bottom: 0;
+      width: calc(100% - 225px);
+    }
+
   }
 
   label {
@@ -15,7 +28,6 @@
 
   input {
     @extend %input;
-    display: inline-block;
     height: 80px;
     margin-right: 1em;
     margin-bottom: 0;
@@ -25,8 +37,13 @@
 
   a {
     height: 80px;
-    margin-left: 2em;
+    width: 100%;
     display: flex;
     align-items: center;
+
+    @include breakpoint($bp2) {
+      width: auto;
+      margin-left: 2em;
+    }
   }
 }
