TH-283 provider updates

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-search/_provider-search.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-search/_provider-search.scss
@@ -19,7 +19,6 @@
       margin-bottom: 0;
       width: calc(100% - 225px);
     }
-
   }
 
   label {
@@ -42,7 +41,7 @@
     align-items: center;
 
     @include breakpoint($bp2) {
-      width: auto;
+      width: 230px;
       margin-left: 2em;
     }
   }
