--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-filter/_provider-filter.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-filter/_provider-filter.scss
@@ -1,6 +1,7 @@
 .filter {
   background-color: $trust-ltst;
   padding: 2em;
+  margin-bottom: 6em;
 
   @include breakpoint($bp5) {
     margin-left: calc(((100% - 1500px) / 2) + 2em);
