--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-teaser/provider-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/provider-teaser/provider-teaser.twig
@@ -1,4 +1,4 @@
-<div class="teaser">
+<div class="teaser js-section-animation">
   <div class="provider-teaser__image">
     {% if provider.img %}
       {% include "@molecules/image-background/image-background.twig" with {
