--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
@@ -22,7 +22,7 @@
     {% include "@organisms/listing-cta/listing-cta.twig" with {
         "title": cta.title,
         "text": cta.text,
-        "link": cta.link
+        "link": cta.link,
       } %}
   {% endblock %}
 
