--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/teasers/provider-teaser/provider-teaser.twig
@@ -8,7 +8,7 @@
       } %}
     {% endif %}
   </div>
-  <span class="provider-teaser__content__name">{{ provider.details.name }}</span>
+  <span class="callout provider">{{ provider.details.name }}</span>
   <div class="teaser__content">
     <div>
       <span class="teaser-label">Specialties</span>
