--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/listing/find-a-provider.twig
@@ -22,8 +22,8 @@
   {% endblock %}
 
   {% block page_content %}
-    {% include "@organisms/listings/provider-list/provider-list.twig" with {
-        "providers": providers,
+    {% include "@organisms/listings/teaser-list/teaser-list.twig" with {
+        "teasers": providers,
       } %}
     {% include "@molecules/pagination/pagination.twig" %}
     {% include "@organisms/listings/listing-cta/listing-cta.twig" with {
