--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/form-section/_form-section.scss
@@ -73,8 +73,12 @@
       margin-right: 1.5em;
     }
   }
+  
+  label {
+    display: inline-block;
+    margin-right: 1em;
+  }
 }
-
 
 .form-section__optional {
   @include adjust-font-size-to($label, .9);
