--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
@@ -146,21 +146,17 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
     @include bp3 {
       display: grid;
       grid-gap: $gutter;
-      grid-template-columns: 6% 6fr 6%;
+      grid-template-columns: minmax(0, 1fr);
       grid-auto-rows: auto 1fr;
       
       .no-cssgrid & {
         display: block;
       } 
     }
-    
-    @include breakpoint($bp4) {
-      grid-template-columns: 8% 6fr 8%;
-    }
 
     .main-content {
       @include breakpoint($bp3) {
-        grid-column: 2 / span 1; 
+        grid-column: 1 / span 1; 
         grid-row: 1 / span 2;
         
         .no-cssgrid & {
@@ -170,6 +166,7 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
       }
       
       @include breakpoint($bp4) {
+        margin: 0 6%;
         
         .no-cssgrid & {
           width: 75%;
