add in the js, adjust toggle tip a bit

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/toggle-tip/toggle-tip.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/toggle-tip/toggle-tip.twig
@@ -1,3 +1,4 @@
+{{ attach_library('tower_health/toggle-tip') }}
 <div aria-role="tooltip" class="toggle-tip">
   <button class="toggle-tip__toggle" aria-controls="{{info_id}}">
     i
