--- a/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
@@ -13,6 +13,7 @@
   <script src="../../js/svgxuse.min.js"></script>
   <script src="../../../../dist/02-molecules/menus/main-menu/main-menu.js"></script>
   <script src="../../../../dist/02-molecules/autocomplete-dropdown/autocomplete.js"></script>
+  <script src="../../../../dist/02-molecules/toggle-tip/toggle-tip.js"></script>
 
   </body>
 </html>
