--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/icon-button.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/icon-button.twig
@@ -1,4 +1,4 @@
-<a class="icon-button" href="{{ url }}">
+<a class="icon-button {% if variation %}icon-button--{{variation}}{% endif %}" href="{{ url }}">
   <span class="icon-button__container">{% include icon %}</span>
   {{ text }}
 </a>
