--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/location-hero/_location-hero.scss
@@ -3,6 +3,7 @@
   position: relative;
   padding-top: 100px;
   width: 100%;
+  max-width: 1350px;
 
   @include breakpoint($bp2) {
     padding: 70px 2em 0;
@@ -11,7 +12,6 @@
   @include breakpoint($bp3) {
     padding: 0 2em;
     margin: 5.5em auto 5.5em;
-    max-width: 1500px;
   }
 
   @include breakpoint(1050px) {
@@ -21,257 +21,204 @@
   @include breakpoint($bp4) {
     margin: 8em auto 10em;
   }
+}
 
-  .location-hero__content {
-    background-color: $white;
-    border-top: 4px solid $trust-ltr;
-    border-right: 4px solid $trust-ltr;
-    border-bottom: 4px solid $trust-ltr;
-    border-radius: 0 5px 5px 0;
-    width: 96%;
-    padding: 7em 1em 2em 2em;
-    margin-top: 40%;
-    box-shadow: 0 2px 8px rgba($black, 0.15);
-    position: relative;
-    z-index: 1;
+.location-hero__content {
+  background-color: $white;
+  border-top: 4px solid $trust-ltr;
+  border-right: 4px solid $trust-ltr;
+  border-bottom: 4px solid $trust-ltr;
+  border-radius: 0 5px 5px 0;
+  width: 96%;
+  padding: 6em 1em 2em 2em;
+  box-shadow: 0 2px 8px rgba($black, 0.15);
+  position: relative;
+  z-index: 1;
 
-    @include breakpoint($bp0) {
-      width: 95%;
-      margin-top: 45%;
-    }
-
-    @include breakpoint($bp2) {
-      border: 4px solid $trust-ltr;
-      border-radius: 5px;
-      width: 90%;
-      padding: 2em;
-      padding-top: 8em;
-    }
-
-    @include breakpoint($bp3) {
-      border: none;
-      background-color: transparent;
-      margin-top: 0;
-      box-shadow: none;
-      position: static;
-
-      &.image {
-        padding-right: 35%;
-      }
-    }
-
-    @include breakpoint($bp4) {
-      padding: 8em 4em 3em 4em;
-
-      &.image {
-        padding-right: 35%;
-      }
-    }
-
-    .breadcrumbs {
-      top: -10px;
-
-      @include breakpoint($bp2) {
-        top: -20px;
-      }
-
-      @include breakpoint($bp3) {
-        top: -200px;
-      }
-
-      @include breakpoint($bp5) {
-        top: -250px;
-      }
-    }
-
-    .location-label {
-      position: absolute;
-      top: 2em;
-      left: -5em;
-      padding: 1em;
-      padding-left: 7em;
-      background-color: $trust;
-      color: $white;
-      text-transform: uppercase;
-      font-weight: 600;
-      border-radius: 10px;
-      z-index: -10;
-
-      @include breakpoint($bp3) {
-        padding-left: 9em;
-      }
-
-      @include breakpoint($bp4) {
-        padding-left: 11em;
-      }
-    }
-
-    h1 {
-      @extend %track-in;
-      margin: 0;
-      color: $primary-dark;
-      text-transform: uppercase;
-      font-size: 0.9em;
-      line-height: 1em;
-      font-weight: 600;
-      word-wrap: break-word;
-
-      @include breakpoint($bp0) {
-        font-size: 1.25em;
-      }
-
-      @include breakpoint("425px") {
-        font-size: 1.5em;
-      }
-
-      @include breakpoint($bp2) {
-        font-size: 1.75em;
-        line-height: 1em;
-      }
-
-      @include breakpoint("775px") {
-        font-size: 2em;
-      }
-
-      @include breakpoint($bp3) {
-        font-size: 2.5em;
-        line-height: 1.05em;
-      }
-
-      @include breakpoint($bp4) {
-        font-size: 3.0em;
-      }
-
-      @include breakpoint(1400px) {
-        font-size: 3.5em;
-      }
-
-      @include breakpoint($bp5) {
-        font-size: 4em;
-        line-height: 1.15em;
-      }
-    }
-
-    .location-details {
-      display: flex;
-      flex-wrap: wrap;
-
-      @include breakpoint($bp2) {
-        flex-wrap: nowrap;
-      }
-
-      .location-details__first {
-        width: 50%;
-        padding-right: 1em;
-        order: 2;
-
-        @include breakpoint($bp2) {
-          order: 1;
-        }
-      }
-
-      .location-details__second {
-        color: $trust-aa;
-        font-weight: 600;
-        order: 1;
-
-        @include breakpoint($bp3) {
-          order: 2;
-        }
-
-        a {
-          text-decoration: none;
-          display: block;
-        }
-      }
-
-      p {
-        margin: 0;
-      }
-
-      span {
-        text-transform: uppercase;
-        font-weight: 400;
-        display: block;
-        color: $primary-dark;
-        margin-top: 1em;
-      }
-    }
-
-    .icon-button {
-      margin-left: 0;
-      max-width: 175px;
-      margin-top: 1em;
-
-      .icon-button__container {
-        margin-top: 0;
-      }
-    }
-
-    &::before {
-      content: ' ';
-      display: none;
-
-      @include breakpoint($bp3) {
-        display: block;
-        border: 5px solid $trust-ltst;
-        border-radius: 10px;
-        margin: 0 auto;
-        position: absolute;
-        top: 0;
-        left: 2em;
-        right: 0;
-        bottom: 0;
-        z-index: -5;
-      }
-    }
+  @include breakpoint($bp0) {
+    width: 95%;
   }
 
-  .location-hero__image {
-    width: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    z-index: -10;
-    overflow: hidden;
+  @include breakpoint($bp2) {
+    border: 4px solid $trust-ltr;
+    border-radius: 5px;
+    width: 75%;
+    padding: 2em;
+    padding-top: 6em;
+  }
 
-    .image-background {
-      position: relative;
-      width: 110%;
-      right: -10%;
+  @include breakpoint($bp3) {
+    width: 80%;
+    padding-right: 28%;
+    box-shadow: none;
+    position: static;
+    border-radius: 8px;
+    background-color: transparent;
+  }
+
+  @include breakpoint($bp4) {
+    width: 80%;
+    padding: 6em 34% 2.25em 2em;
+  }
+
+  h1 {
+    @extend %track-in;
+    margin: 0;
+    color: $primary-dark;
+    text-transform: uppercase;
+    font-size: 0.8em;
+    line-height: 1em;
+    font-weight: 600;
+    word-wrap: break-word;
+
+    @include breakpoint($bp0) {
+      font-size: 1em;
+    }
+
+    @include breakpoint("425px") {
+      font-size: 1.25em;
     }
 
     @include breakpoint($bp2) {
-      width: 80%;
+      font-size: 1.5em;
+      line-height: 1em;
+    }
+
+    @include breakpoint("775px") {
+      font-size: 1.75em;
     }
 
     @include breakpoint($bp3) {
-      z-index: auto;
-      right: 0;
-      left: 60%;
-      top: -4em;
-      width: 50%;
-
-      .image-background {
-        position: relative;
-        max-width: 850px;
-        left: 0;
-        right: auto;
-      }
-    }
-
-    @include breakpoint(1050px) {
-      top: -3em;
+      font-size: 2em;
+      line-height: 1.05em;
     }
 
     @include breakpoint($bp4) {
-      left: 55%;
+      font-size: 2.5em;
+    }
+
+    @include breakpoint(1400px) {
+      font-size: 3em;
     }
 
     @include breakpoint($bp5) {
-      top: -6.25em;
-      right: calc(( 100vw - 1500px ) / 2 * -1);
+      font-size: 3.5em;
+      line-height: 1.15em;
     }
+  }
+}
+
+.location-label {
+  position: absolute;
+  top: 1.5em;
+  left: -.025em;
+  padding: 0.75em;
+  padding-left: 2em;
+  background-color: $trust;
+  color: $white;
+  text-transform: uppercase;
+  font-weight: 600;
+  border-radius: 0 10px 10px 0;
+  z-index: -10;
+
+  @include breakpoint($bp2) {
+    left: -3em;
+    padding-left: 5em;
+  }
+
+  @include breakpoint($bp3) {
+    left: -2em;
+    padding-left: 6em;
+  }
+
+  @include breakpoint("1350px") {
+    left: calc(-1 * (100vw - 1350px) / 2);
+    padding-left: calc(((100vw - 1350px) / 2) + 4em)
+  }
+}
+
+
+.location-details {
+  display: flex;
+  flex-wrap: wrap;
+
+  @include breakpoint($bp2) {
+    flex-wrap: nowrap;
+  }
+
+  .location-details__first {
+    padding-right: 1em;
+
+    @include breakpoint("412px") {
+      width: 50%;
+    }
+
+    .icon-button {
+      margin-top: 1em;
+    }
+  }
+
+  .location-details__second {
+    color: $trust-aa;
+    font-weight: 600;
+
+    a {
+      text-decoration: none;
+      display: block;
+    }
+  }
+
+  p {
+    margin: 0;
+  }
+
+  span {
+    @extend %track-out;
+    text-transform: uppercase;
+    font-size: 0.9em;
+    font-weight: 400;
+    display: block;
+    color: $primary-dark;
+    margin: 1em 0 0.5em 0;
+  }
+}
+
+.location-hero__image {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  z-index: -10;
+  overflow: hidden;
+
+  .image-background {
+    position: relative;
+    width: 90%;
+    right: -30%;
+  }
+
+  @include breakpoint($bp2) {
+    width: 80%;
+  }
+
+  @include breakpoint($bp3) {
+    z-index: 5;
+    right: 0;
+    left: 53%;
+    top: -1.5em;
+    width: auto;
+
+    .image-background {
+      position: relative;
+      width: 150%;
+      max-width: 625px;
+      left: 0;
+      right: auto;
+    }
+  }
+
+  @include breakpoint($bp5) {
+    right: calc(( 100vw - 1365px ) / 2 * -1);
   }
 }
 
