--- a/docroot/themes/custom/tower_health/components/_patterns/04-templates/_default.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/04-templates/_default.twig
@@ -5,10 +5,9 @@
 
 {% set main_content_base_class = main_content_base_class|default('main-content') %}
 {% set main_content_modifiers = [] %}
-  
+
 {% set page_base_class = page_base_class|default('page') %}
 {% set page_modifiers = [] %}
-
 
 {% if top_sidebar or bottom_sidebar %}
   {% set page_modifiers = page_modifiers|merge(['with-sidebar']) %}
@@ -34,7 +33,7 @@
       {% block page_header %}{% endblock %}
       </div>
     {% endif %}
-    
+
     <div {{ bem(page_base_class, (page_modifiers), page_blockname) }}>
       {% if top_sidebar %}
         <aside class="top-sidebar" role="complementary">
@@ -45,11 +44,17 @@
       <div {{ bem(main_content_base_class, (main_content_modifiers), main_content_blockname) }}>
         {% block page_content %}{% endblock %}
       </div>
-      
+
       {% if bottom_sidebar %}
         <aside class="bottom-sidebar" role="complementary">
           {% block bottom_page_sidebar %}{% endblock %}
         </aside>
+      {% endif %}
+
+      {% if full_content %}
+        <div class="full-content">
+          {% block full_content %}{% endblock %}
+        </div>
       {% endif %}
     </div>
 
