--- a/docroot/themes/custom/tower_health/components/_patterns/04-templates/with-sidebar.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/04-templates/with-sidebar.twig
@@ -2,6 +2,7 @@
   page_header: TRUE,
   top_sidebar: TRUE,
   bottom_sidebar: TRUE,
+  full_content: TRUE,
   full_width: false,
   menu_items: header.templates.menu_items,
   footer_menu_items: footer.templates.menu_items
@@ -12,22 +13,28 @@
       "place_holder": "Page Header Region",
     } %}
   {% endblock %}
-  
+
   {% block top_page_sidebar %}
     {% include "@templates/_place-holder.twig" with {
       "place_holder": "Top Sidebar Section",
     } %}
   {% endblock %}
-  
+
   {% block page_content %}
     {% include "@templates/_place-holder.twig" with {
       "place_holder": "Primary Content",
     } %}
   {% endblock %}
-  
+
   {% block bottom_page_sidebar %}
     {% include "@templates/_place-holder.twig" with {
       "place_holder": "Bottom Sidebar Section",
+    } %}
+  {% endblock %}
+
+  {% block full_content %}
+    {% include "@templates/_place-holder.twig" with {
+      "place_holder": "Full Width Section",
     } %}
   {% endblock %}
 
