--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/location/location-detail.twig
@@ -1,11 +1,14 @@
 {% embed "@templates/_default.twig" with {
-  full_width: true
+  page_header: TRUE,
+  top_sidebar: TRUE,
+  full_content: TRUE,
+  full_width: false
 } %}
 
-  {% block page_content %}
+  {% block page_header %}
     {% if breadcrumb %}
       {% include "@molecules/menus/breadcrumbs/breadcrumbs.twig" with {
-        breadcrumb: breadcrumb
+        breadcrumb: breadcrumb,
       } %}
     {% endif %}
     {% include "@organisms/location-hero/location-hero.twig" with {
@@ -19,47 +22,52 @@
       img: hero.img,
       classes: hero.classes,
     } %}
+  {% endblock %}
 
-    <div class="menu-wrapper">
-      {% include "@molecules/rich-text/rich-text.twig" %}
-      {% include "@molecules/link-list/link-list.twig" with {
+  {% block top_page_sidebar %}
+    {% include "@molecules/hours-block/hours-block.twig" with {
+        hours: hours,
+      } %}
+  {% endblock %}
+
+  {% block page_content %}
+    {% include "@molecules/rich-text/rich-text.twig" %}
+    {% include "@molecules/link-list/link-list.twig" with {
         title: link_list.title,
         items: link_list.items,
       } %}
-      {% include "@molecules/hours-block/hours-block.twig" with {
-        hours: hours,
-      } %}
-    </div>
+  {% endblock %}
 
+  {% block full_content %}
     {% include "@organisms/omw-callout/omw-callout.twig" with {
       title: omw_callout.title,
-      text: omw_callout.text,
-      button: omw_callout.button,
-    } %}
+        text: omw_callout.text,
+        button: omw_callout.button,
+      } %}
 
     {% include "@organisms/image-teaser-banner/image-teaser-banner.twig" with {
-      img: image_callout.img,
-      title: image_callout.title,
-      text: image_callout.text,
-      links: image_callout.links,
-    } %}
+        img: image_callout.img,
+        title: image_callout.title,
+        text: image_callout.text,
+        links: image_callout.links,
+      } %}
 
     {% include "@organisms/box-links/box-links.twig" with {
-      boxes: boxes
-    } %}
+        boxes: boxes,
+      } %}
 
     {% include "@organisms/image-teaser-banner/image-teaser-banner.twig" with {
-      img: image_callout.img,
-      title: image_callout.title,
-      text: image_callout.text,
-      links: image_callout.links,
-    } %}
+        img: image_callout.img,
+        title: image_callout.title,
+        text: image_callout.text,
+        links: image_callout.links,
+      } %}
 
     {% include "@organisms/text-teaser-banner/text-teaser-banner.twig" with {
-      title: text_callout.title,
-      text: text_callout.text,
-      button: text_callout.button,
-    } %}
+        title: text_callout.title,
+        text: text_callout.text,
+        button: text_callout.button,
+      } %}
   {% endblock %}
 
 {% endembed %}
