TH-284 adjust background for side menu

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
@@ -32,6 +32,11 @@
       bottom: 10%;
       z-index: -5;
     }
+
+    @include breakpoint("1350px") {
+      width: calc(100% + ((100vw - 1350px) / 2) - 2em);
+      right: calc(-1 * ((100vw - 1350px) / 2) - 2em);
+    }
   }
 
   ul {
