--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/_box-links.scss
@@ -50,7 +50,7 @@
       position: absolute;
       height: 1px;
       border-top: 6px solid $growth;
-      border-radius: 3px;
+      border-radius: 0 3px 3px 0;
       left: 0;
       bottom: 4em;
       width: calc((100vw - 9em));
@@ -69,6 +69,10 @@
       right: 0;
       background-repeat: no-repeat;
       background-size: cover;
+
+      &:hover {
+        transform: scale(1.05);
+      }
 
       .box-link__title {
         position: absolute;
@@ -112,14 +116,13 @@
         font-size: 1em;
         letter-spacing: 0.1em;
         position: absolute;
-        right: 3.5em;
+        right: 4.5em;
         bottom: 5em;
       }
     }
 
     @include breakpoint($bp3) {
       &:hover {
-        transform: scale(1.05);
 
         &::after {
           border-color: $growth;
