--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/box-links/box-links.twig
@@ -2,7 +2,7 @@
   <div class="box-links-wrapper">
     {% for box in boxes %}
       <a class="box-link" href="{{ link.url }}">
-        <div class="box-link__background" style='background-image: linear-gradient(to top, #003056AA, #003056AA), url("{{ box.img.src }}");'>
+        <div class="box-link__background" style='background-image: linear-gradient(to top, #003056, #003056 25%, #FFFFFF00), url("{{ box.img.src }}");'>
           <h3 class="box-link__title"><span>{{ box.title }}</span></h3>
           <div class="box-link__hover">
             <h3><span>{{ box.title }}</span></h3>
