TH-284 more spacing adjustments

--- a/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/02-molecules/menus/section-menu/_section-menu.scss
@@ -12,6 +12,11 @@
   @include breakpoint($bp3) {
     background-color: transparent;
     font-size: 1em;
+    margin-top: 8em;
+  }
+
+  @include breakpoint($bp4) {
+    margin-top: 6em;
   }
 
   &::after {
