--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/text-teaser-banner/text-teaser-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/text-teaser-banner/text-teaser-banner.twig
@@ -1,6 +1,6 @@
 <div class="text-teaser">
+  <h2 class="text-teaser__title">{{ title }}</h2>
   <div class="text-teaser__text">
-    <span class="text-teaser__title">{{ title }}</span>
     <p>{{ text }}</p>
   </div>
   <div class="text-teaser__button">
