TH-284 on my way block basic styling

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/omw-callout/omw-callout.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/omw-callout/omw-callout.twig
@@ -1,9 +1,9 @@
 <div class="omw-callout">
-  <div>
-    <div class="omw-callout__title">{{ title }}</div>
-    <div class="omw-callout__text">{{ text }}</div>
+  <div class="omw-callout__text">
+    <h2 class="omw-callout__title">{{ title }}</h2>
+    <p>{{ text }}</p>
   </div>
-  <div>
+  <div class="omw-callout__button">
     <a class="button button-primary" href="{{ button.url }}">{{ button.text }}</a>
   </div>
 </div>
